--- a/style/instructor.css
+++ b/style/instructor.css
@@ -9,18 +9,18 @@
     margin-top: 2.5em;
     display: flex;
     flex-wrap: wrap;
-    gap: 1em;
+    gap: 0.5em;
 }
 .instructor-card {
     width: calc((100% - 3em) / 4);
 }
-.instructors-image {
+.instructors-image-sec {
     background: #12376b40;
     height: 13em;
     position: relative;
     border-radius: 0.8em 0.8em 0 0;
 }
-.instructors-image img {
+.instructors-image-sec img {
     position: absolute;
     width: 100%;
     height: 14em;
