--- a/style/variables.css
+++ b/style/variables.css
@@ -3,6 +3,8 @@
     --yellow-color:#F5A805;
     --yellow-color-card:#F4A905;
     --color-font-card:#9B6900;
+    --pink-bg-color:#F04B2540;
+    --lb-bg-color:#286CD540;
     --green-color:#00B912;
     --dark-color:#000;
     --yellow-color-25:#F4A90540;
