--- a/style/instructor.css
+++ b/style/instructor.css
@@ -13,12 +13,24 @@
 }
 .instructor-card-sec {
     width: calc((100% - 3em) / 4);
+    border-radius: 0.6em;
 }
 .instructors-image-sec {
-    background: #12376b40;
     height: 13em;
     position: relative;
     border-radius: 0.8em 0.8em 0 0;
+}
+.g-color{
+    background-color: #12376B40;
+}
+.lb-color{
+    background-color: var( --lb-bg-color);
+}
+.p-color{
+    background-color: var(--pink-bg-color);
+}
+.l-color{
+background-color: #F4A90540;
 }
 .instructors-image-sec img {
     position: absolute;
@@ -28,13 +40,16 @@
     bottom: 0;
 }
 .instructors-content {
-    padding: 2em;
+    height: 8.6em;
     background: var(--secondary-color);
 }
 .instructors-content h3 {
     margin-bottom: 0.5em;
     font-weight: 700;
+    font-size: 1.25em;
 }
 .instructors-content p {
     color: var(--gray-color-card-text);
+    font-size: 1em;
+    font-weight: 400;
 }
